Setting up your index view to show your drinks data

--- a/gitpub/views/index.ejs
+++ b/gitpub/views/index.ejs
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Drinks</title>
 </head>
 <body style="background-color:bisque; color:blueviolet">
     <h1 style="color:blue">Welcome to gitPub</h1>
+   
+         <ul>
+        <% for(let i = 0; i < drinks.length; i++){ %>
+
+<li>Name: <%= drinks[i].name.charAt(0).toUpperCase() + drinks[i].name.slice(1) %>, Price: <%= drinks[i].price %></li>
+
+        <% } %>
+    </ul>
+ 
 </body>
-</html>
+</html> 
