--- a/gitpub/views/show.ejs
+++ b/gitpub/views/show.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,4 +12,21 @@
       <li>price: <%= drink.price %></li>
     </ul>
   </body>
-</html>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drinks</title>
+</head>
+<body>
+    <h1>At foo bar</h1>
+    <h2><%= drink.name %></h2>
+    <img src="<%= drink.image %>" alt="Drink Image">
+    <h3><%= drink.price %></h3>
+    <a href="/index">Back</a>
+</body>
+</html> 
